2007-11-16 Yusei
* Fixed Base_showFoundText. selection_name argument is required for listbox.
* Fixed Base_showFoundText. if document contains charactor which utf-8 codec cannot decode, remove it from result.

2007-10-11 Kazuhiko
* move portal_contributions from Paths to Tools.

2007-10-04 yusei
* Fixed a bug that search result does not appear. (stop to use countFolder)

2007-10-03 yusei
* Remove obsolete proxy field (Base_viewAdvancedSearchDialog.your_category_list)

2007-10-03 yusei
* Fixed broken proxy fields.
(ExternalSource_view.my_follow_up_title and Image_view.my_follow_up_title)

2007-09-25 yo
* Set module group on portal types.

2007-09-13 yo
* Allow more for Manager, otherwise even changing permissions does not work.

2007-09-13 yo
* Manager must be allowed for reading documents at any stage for indexing and management.

2007-03-26
Architecture design completed. Cleanup of code in progress.

2007-02-09
Security settings moved out from the generic implementation.

2007-02-03
Reimplemented again, to use processing status workflow for everything.

2007-01-29
Reimplemented validation flag as publication workflow variable.

2007-01-24
Major refactoring - almost everything changed.

2006-12-11
Determining portal type based on content (if implementation provides the way to do so)

2006-12-08
Document validation workflow

2006-11-15
Added RSS support to document_folder

2006-11-08
Reading doc properties from content and from email text upon ingestion

2006-11-02
Deletion in publication workflow
Advanced search dialog for putting together search string (Google-like)

2006-11-01
Implemented basic security settings (6 policies)

2006-10-30
Removed "collaborated", added "shared"
Implemented "personal/project" security classification

2006-10-28
Added "collaborated" state to publication_workflow

2006-10-08
Fixes and implementation improvements

2006-10-02
Moved file uploading from /view form to object_exchange